modal instructions done

--- a/index.html
+++ b/index.html
@@ -24,7 +24,30 @@
         <div id="scorePlayerO"></div>
     </div>
 
-    <button type="button" onclick="restartGame()">RESTART GAME</button>
+    <div class="buttons">
+        <button type="button" onclick="restartGame()">RESTART GAME</button>
+        <button type="button" id="showInstructions" onclick="openModalForInstructions()">Game instructions</button>
+    </div>
+
+    <dialog id="gameInstructions">
+        <form method="dialog">
+            <h1>Règles du jeu</h1>
+            <p>
+                Version améliorée du jeu du morpion avec 9 cases contenant chacunes une mini grille de 3x3 (soit 81 cases).<br />
+                <br />
+                Les règles sont celles du morpion complétée. Les joueurs remplissent tour à tour les cases avec le symbole qui leur est attribué.<br />
+                <br />
+                Lorsqu'un joueur a réussi à aligner 3 symboles dans une mini-grille il remporte cette mini grille.<br />
+                <br />
+                Le premier joueur qui a gagné trois mini-grilles alignées (horizontalement, verticalement ou en diagonale) remporte la partie.<br />
+                <br />
+                Ces règles sont complétées par les règles suivantes:<br />
+                - Si un joueur joue dans une case, le joueur suivant joue dans la mini-grille qui occupe la même place dans la grille que le coup joué. Ainsi dans l'exemple ci-dessous, si X joue dans la grille 4 comme indiquée, O devra jouer dans la grille 6.<br />
+                - Si un joueur envoie son adversaire dans une minigrille déjà gagnée, l'adversaire pourra jouer dans n'importe quelle case vide de la grille de jeu.<br />
+            </p>
+            <button>Close</button>
+        </form>
+    </dialog>
 
     <script src="script.js"></script>
 </body>
