update instructions with img

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 - Si un joueur joue dans une case, le joueur suivant joue dans la mini-grille qui occupe la même place dans la grille que le coup joué. Ainsi dans l'exemple ci-dessous, si X joue dans la grille 4 comme indiquée, O devra jouer dans la grille 6.<br />
                 - Si un joueur envoie son adversaire dans une minigrille déjà gagnée, l'adversaire pourra jouer dans n'importe quelle case vide de la grille de jeu.<br />
             </p>
+            <img src="img_instructions.JPG">
             <button>Close</button>
         </form>
     </dialog>
